src/topMenu/TopMenu.css
.top-menu {
  height: 44px;
  background-color: #3d3d3a;
  display: flex;
  align-items: center;
  padding: 0px 10px;
  border-radius: 60px;
  column-gap: 10px;
  width: fit-content;
  position: relative;
}

.top-menu > button {
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
}
.top-menu > .drop-down {
  position: absolute;
  border: 1px solid #4c4c4c;
  background-color: #3d3d3a;
  display: flex;
  flex-direction: column;
  row-gap: 16px;
  padding: 24px 12px;
  width: 300px;
  right: 0px;
  top: 50px;
  z-index: 99;
  transform: translateY(-30px);
  opacity: 0;
  visibility: hidden;
  border-radius: 30px;
  transition: all 150ms ease-in-out;
}
.top-menu > .drop-down:has(.google-div) {
  width: fit-content;
  padding: 8px 6px;
  height: fit-content;
  border-radius: 20px;
}
.top-menu > .drop-down.active {
  display: block;
  visibility: visible;
  transform: translateY(0px);
  opacity: 1;
}

.drop-down .range-input-background {
  background: #fbd1a2;
}
.toggle {
  width: 40px;
  height: 24px;
  border-radius: 20px;
  display: flex;
  align-items: center;
  background-color: #2b2b29;
}
.toggle > .knob {
  height: 104%;
  width: 60%;
  background-color: #808080;
  border-radius: 50%;
  display: grid;
  transition: all 150ms ease-in-out;
  place-content: center;
  cursor: pointer;
}
.toggle > .knob svg {
  color: #2b2b29;
  height: 16px;
  width: 16px;
}

.knob.active {
  transform: translateX(16px);
  background-color: #fbd1a2;
}

